--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=zoo
+
+# MySql
+spring.datasource.url=jdbc:mysql://localhost:3306/zoo
+spring.datasource.username=root
+spring.datasource.password=quang23032002
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis
+mybatis.mapper-locations=classpath*:mappers/*.xml
+logging.level.org.mybatis=DEBUG
+logging.level.org.apache.ibatis=DEBUG
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
